--- a/tresh/.eslintrc.json
+++ b/tresh/.eslintrc.json
@@ -10,6 +10,7 @@
   },
   "rules": {
     "quotes": "off",
+    "keywords": "off",
     "import/prefer-default-export": "off",
     "react/prop-types": 0,
     "jsx-a11y/no-noninteractive-element-interactions": 0,
